fixed settings geat spacing on profileCard

--- a/scss/pages/_dashboard.scss
+++ b/scss/pages/_dashboard.scss
@@ -3,8 +3,8 @@
   // justify-content: space-between;
   padding: 5vh 15vw;
   min-height: 80vh;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 1fr 2fr;
   min-width: auto;
-  grid-gap: 100px;
+  grid-gap: 80px;
   background-color: $BackgroundColor;
 }
