--- a/scss/parts/_profileCard.scss
+++ b/scss/parts/_profileCard.scss
@@ -2,6 +2,7 @@
   background: #fff;
   box-shadow: 4px 4px 20px #e2e2e2;
   display: flex;
+  justify-content: space-between;
 
   .profile-card-contents {
     padding: 40px;
